--- a/trafie/Base.lproj/LaunchScreen.xib
+++ b/trafie/Base.lproj/LaunchScreen.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,16 +12,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright 2015 • trafie. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="626" width="336" height="20.5"/>
+                    <rect key="frame" x="20" y="626" width="336" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.494118" green="0.494118" blue="0.494118" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="track.png" translatesAutoresizingMaskIntoConstraints="NO" id="wJ0-MC-t0W">
-                    <rect key="frame" x="84" y="118" width="207" height="111"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_rounded_large.png" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wJ0-MC-t0W">
+                    <rect key="frame" x="101" y="118" width="173" height="173"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="415" id="1oO-rl-JWV"/>
+                        <constraint firstAttribute="height" constant="173" id="2Aj-Sn-cgK"/>
                         <constraint firstAttribute="height" constant="111" id="3Ch-9X-d9I"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="222" id="4Hb-UR-viO"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="207" id="58X-vn-Q5t"/>
@@ -30,14 +31,17 @@
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="222" id="WCr-cc-fbo"/>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="207" id="bkt-U5-X5e"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="111" id="dRN-Aj-HJI"/>
+                        <constraint firstAttribute="width" constant="173" id="jnw-bj-rvo"/>
                         <constraint firstAttribute="height" constant="222" id="lpc-Ub-Ons"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="1oO-rl-JWV"/>
+                            <exclude reference="3Ch-9X-d9I"/>
                             <exclude reference="4Hb-UR-viO"/>
                             <exclude reference="58X-vn-Q5t"/>
                             <exclude reference="7bb-UG-5sB"/>
+                            <exclude reference="Tkb-dD-JFK"/>
                             <exclude reference="WCr-cc-fbo"/>
                             <exclude reference="bkt-U5-X5e"/>
                             <exclude reference="dRN-Aj-HJI"/>
@@ -46,7 +50,7 @@
                     </variation>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trafieText.png" translatesAutoresizingMaskIntoConstraints="NO" id="X6c-wf-7ui">
-                    <rect key="frame" x="84" y="237" width="207" height="70"/>
+                    <rect key="frame" x="35" y="299" width="305" height="70"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="70" id="3MF-bA-GeJ"/>
                     </constraints>
@@ -60,16 +64,23 @@
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
                 <constraint firstItem="wJ0-MC-t0W" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="lTs-CZ-LVZ"/>
                 <constraint firstItem="X6c-wf-7ui" firstAttribute="top" secondItem="wJ0-MC-t0W" secondAttribute="bottom" constant="8" id="nS9-PJ-0tX"/>
+                <constraint firstItem="X6c-wf-7ui" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="o3Z-Ob-tAI"/>
                 <constraint firstItem="X6c-wf-7ui" firstAttribute="leading" secondItem="wJ0-MC-t0W" secondAttribute="leading" id="uhl-9u-54g"/>
                 <constraint firstItem="wJ0-MC-t0W" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="118" id="vmT-nc-tfW"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="HI0-n5-4Ar"/>
+                    <exclude reference="uhl-9u-54g"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="547.5" y="454.5"/>
         </view>
     </objects>
     <resources>
-        <image name="track.png" width="465" height="222"/>
+        <image name="logo_rounded_large.png" width="720" height="720"/>
         <image name="trafieText.png" width="305" height="98"/>
     </resources>
 </document>
